--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 }
 body{
 	background-image : url("https://hdqwalls.com/download/blur-background-6z-1920x1080.jpg");
+	bsckground-color : #AB82FF;
 	background-size: cover;
 	color : white;
 }
