--- a/index.css
+++ b/index.css
@@ -2,8 +2,7 @@
 	font-family : Helvetica;
 }
 body{
-	background-image : url("https://hdqwalls.com/download/blur-background-6z-1920x1080.jpg");
-	bsckground-color : #AB82FF;
+	background-image : url("bgimage.jpg");
 	background-size: cover;
 	color : white;
 }
